--- a/src/style.less
+++ b/src/style.less
@@ -1,43 +1,52 @@
-// .show {
-//   opacity: 1;
-//   transition: all ease-in 0.7s;
-// }
-// .hide {
-//   animation: hideItem 1s ease-in forwards;
-// }
+@import '//at.alicdn.com/t/font_781013_8423bdl977a.css';
 
-// @keyframes hideItem {
-//   0% {
-//     opacity: 1;
-//     color: red;
-//   }
-//   50% {
-//     opacity: 0.5;
-//     color: green;
-//   }
-//   100%{
-//     opacity: 0;
-//     color: blue;
-//   }
-// }
-
-.fade-enter, .fade-appear {
-  opacity: 0;
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
-.fade-enter-active, .fade-appear-active {
-  opacity: 1;
-  transition: opacity 1s ease-in;
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+	display: block;
 }
-.fade-enter-done {
-  opacity: 1;
+body {
+	line-height: 1;
 }
-.fade-exit {
-  opacity: 1;
+ol, ul {
+	list-style: none;
 }
-.fade-exit-active {
-  opacity: 0;
-  transition: opacity 1s ease-in;
+blockquote, q {
+	quotes: none;
 }
-.fade-exit-done {
-  opacity: 0;
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+a {
+	text-decoration: none;
 }
